--- a/index.html
+++ b/index.html
@@ -6,13 +6,14 @@
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    
     <link href="https://fonts.googleapis.com/css2?family=Cabin:ital,wght@0,400..700;1,400..700&family=Manrope:wght@200..800&family=Miltonian&family=Signika:wght@300..700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 
     <link rel="stylesheet" href="./css/imports.css">
     <title>Organizer - Cadastro</title>
 </head>
-<body>
+<body class="fundo">
     <main class="main-content">
         <div class="content-container">
 
@@ -46,7 +47,7 @@
                 <button class="form-sign-up-button" form="form-sign-up-button">Se cadastrar</button>
             </div>
 
-            <a class="login-page-button" href="#">
+            <a class="login-page-button" href="./login-page.html">
                 <img src="./img/seta-direita-cadastro.png" alt="">
                 <p>Login</p>
             </a>
