atualização da pagina work-space
novos estilos e elementos adicionados na pagina work-space

--- a/work-space.html
+++ b/work-space.html
@@ -11,20 +11,24 @@
 
     <title>Area de trabalho</title>
 </head>
-<body>
+<body class="word-space-body">
     <header class="header-work-space">
-        <h1 class="logo">Organizer</h1>
-
-        <div class="user-profile"></div>
+        <div class="header-work-space-content">
+            <h1 class="logo">Organizer</h1>
+            
+            <div class="user-profile"></div>
+        </div>
     </header>
 
     <main class="main-content-work-space">
         <header class="header-main-content">
-            <h2>Área de trabalho</h2>
+            <div class="header-main-content__content-1">
+                <h2>Área de trabalho</h2>
 
-            <i class="fa-solid fa-filter"></i>
+                <i class="fa-solid fa-filter"></i>
+            </div>
 
-            <div>
+            <div class="header-main-content__content-2">
                 <i class="fa-solid fa-magnifying-glass"></i>
                 <input type="search" id="">
             </div>
