Estilização da pagina "work-space"
O estilo da pagina "work-space" foi finalizado

--- a/work-space.html
+++ b/work-space.html
@@ -16,7 +16,9 @@
         <div class="header-work-space-content">
             <h1 class="logo">Organizer</h1>
             
-            <div class="user-profile"></div>
+            <div class="user-profile">
+                <i class="fa-solid fa-user"></i>
+            </div>
         </div>
     </header>
 
@@ -35,9 +37,11 @@
         </header>
 
         <section class="unfinished-plans-section">
-            <div class="slider unfinished-slider">
-                <div class="plan-1 unfinished-plan-1">
-                    <p>Adicionar</p>
+            <div class="container-slider unfinished-slider">
+                <div class="slider">
+                    <div class="plan-1 unfinished-plan-1">
+                        <p>Adicionar</p>
+                    </div>
                 </div>
             </div>
         </section>
@@ -47,8 +51,12 @@
                 <h2>Finalizados</h2>
             </div>
 
-            <div class="slider finished-slider">
-                <div class="plan-1 finished-plan-1"></div>
+            <div class="container-slider finished-slider">
+                <div class="slider">
+                    <div class="plan-1 finished-plan-1">
+                        <p>Nada ainda</p>
+                    </div>
+                </div>
             </div>
         </section>
     </main>
