--- a/steps.html
+++ b/steps.html
@@ -10,31 +10,39 @@
     <link rel="stylesheet" href="./css/imports.css">
     <title>Document</title>
 </head>
-<body class="steps-body">
-    <header class="steps-header">
-        <div class="title-container-steps-header">
-            <h1>Titulo</h1>
+<body class="l-list-body">
+    <header class="l-list-header">
+        <div class="c-list-title-container">
+            <h1 class="c-list-title c-list-title--bigger-size">Titulo</h1>
+
+            <button class="c-list-icon-button">
+                <i class="fa-solid fa-pen"></i>
+            </button>
         </div>
 
-        <div class="steps-menu">
+        <div class="l-list-header__menu">
             <i class="fa-solid fa-sliders"></i>
         </div>
     </header>
 
-    <main class="steps-main-content">
-        <section class="step-1">
-            <header class="step-1-header">
-                <div class="step-1-header-title-container">
-                    <h2>Titulo</h2>
+    <main class="l-list-container">
+        <section class="l-list-container__list-1">
+            <header class="l-list-container__header">
+                <div class="c-list-title-container">
+                    <h2 class=".c-list-title c-list-title--smaller-size">Titulo</h2>
+
+                    <button class="c-list-icon-button">
+                        <i class="fa-solid fa-pen"></i>
+                    </button>
                 </div>
 
-                <div class="step-1-header-filter-icon">
+                <div class="l-list-container__filter-icon">
                     <i class="fa-solid fa-filter"></i>
                 </div>
             </header>
 
-            <div class="add-button">
-                <button>Adicionar Tarefa</button>
+            <div>
+                <button class="c-list-button">Adicionar Tarefa</button>
             </div>
         </section>
     </main>
