--- a/work-space.html
+++ b/work-space.html
@@ -11,50 +11,50 @@
 
     <title>Area de trabalho</title>
 </head>
-<body class="word-space-body">
-    <header class="header-work-space">
-        <div class="header-work-space-content">
-            <h1 class="logo">Organizer</h1>
+<body class="l-work-space-body">
+    <header class="l-work-space-header">
+        <div class="l-work-space-header__content">
+            <h1 class="c-logo">Organizer</h1>
             
-            <div class="user-profile">
+            <div class="c-user-profile">
                 <i class="fa-solid fa-user"></i>
             </div>
         </div>
     </header>
 
-    <main class="main-content-work-space">
-        <header class="header-main-content">
-            <div class="header-main-content__content-1">
-                <h2>Área de trabalho</h2>
+    <main class="l-main-content-work-space">
+        <header class="l-main-content-work-space__header">
+            <div class="header__content-container">
+                <h2 class="content-container__subtitle">Área de trabalho</h2>
 
                 <i class="fa-solid fa-filter"></i>
             </div>
 
-            <div class="header-main-content__content-2">
-                <i class="fa-solid fa-magnifying-glass"></i>
-                <input type="search" id="">
+            <div class="header__search">
+                <i class="fa-solid fa-magnifying-glass search__icon"></i>
+                <input type="search" class="search__input">
             </div>
         </header>
 
-        <section class="unfinished-plans-section">
-            <div class="container-slider unfinished-slider">
-                <div class="slider">
-                    <div class="plan-1 unfinished-plan-1">
-                        <p>Adicionar</p>
+        <section class="unfinished">
+            <div class="c-container-slider unfinished__slider">
+                <div class="c-slider">
+                    <div class="c-plan unfinished__plan-1">
+                        <p class="c-plan--font">Adicionar</p>
                     </div>
                 </div>
             </div>
         </section>
 
-        <section class="finished-plans-section">
-            <div class="finished-title-container">
-                <h2>Finalizados</h2>
+        <section class="finished">
+            <div>
+                <h2 class="finished__title">Finalizados</h2>
             </div>
 
-            <div class="container-slider finished-slider">
-                <div class="slider">
-                    <div class="plan-1 finished-plan-1">
-                        <p>Nada ainda</p>
+            <div class="c-container-slider finished__slider">
+                <div class="c-slider">
+                    <div class="c-plan finished__plan-1">
+                        <p class="c-plan--font">Nada ainda</p>
                     </div>
                 </div>
             </div>
