alteração no icone de olho
inseri uma div em volta do icone de olho e estilizei, alem de alterar a programação pra funcionar com essa div

--- a/index.html
+++ b/index.html
@@ -32,13 +32,19 @@
                 <div class="c-input-container">
                     <label class="c-input-container__input-description" for="password">Senha</label>
                     <input type="password" id="password" class="password c-input-container__input" autocomplete="off">
-                    <i class="fa-solid fa-eye-slash c-eye-icon"></i>
+
+                    <div class="c-eye-icon-container">
+                        <i class="fa-solid fa-eye-slash c-eye-icon"></i>
+                    </div>
                 </div>
 
                 <div class="c-input-container">
                     <label class="c-input-container__input-description" for="confirm-password">Confirmar Senha</label>
                     <input type="password" id="confirm-password" class="password c-input-container__input" autocomplete="off">
-                    <i class="fa-solid fa-eye-slash c-eye-icon"></i>
+
+                    <div class="c-eye-icon-container">
+                        <i class="fa-solid fa-eye-slash c-eye-icon"></i>
+                    </div>
                 </div>
             </form>
 
