--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 
                 <div class="c-input-container">
                     <label class="c-input-container__input-description" for="email">E-mail</label>
-                    <input type="email" id="email" class="c-input-container__input" autocomplete="off">
+                    <input autocomplete="off" type="email" id="email" class="c-input-container__input">
                 </div>
 
                 <div class="c-input-container">
@@ -61,6 +61,6 @@
     </div>
 
     <script src="./js/index/sign-up-validation.js"></script>
-    <script src="./js/index/show-password.js"></script>
+    <script src="./js/global/show-password.js"></script>
 </body>
 </html>
