consertando detalhes de estilo

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
                 <button class="c-form-btn sign-up-button">Se cadastrar</button>
             </div>
 
-            <a class="c-btn-change-entry" href="./login-page.html">
+            <a class="c-btn-change-entry-sign-up" href="./login-page.html">
                 <img  class="c-btn-change-entry__image" src="./img/seta-direita-cadastro.png" alt="">
                 <p class="c-btn-change-entry__text">Login</p>
             </a>
