--- a/login-page.html
+++ b/login-page.html
@@ -35,7 +35,7 @@
                 <button class="c-form-btn login-button">Fazer login</button>
             </div>
 
-            <a class="c-btn-change-entry" href="./index.html">
+            <a class="c-btn-change-entry-login" href="./index.html">
                 <img class="c-btn-change-entry__image" src="./img/seta-esquerda-login.png" alt="">
                 <p>Cadastro</p>
             </a>
