--- a/work-space.html
+++ b/work-space.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -9,7 +9,7 @@
 
     <link rel="stylesheet" href="./css/imports.css">
 
-    <title>Area de trabalho</title>
+    <title>Organizer - Area de trabalho</title>
 </head>
 <body class="l-work-space-body">
     <header class="l-work-space-header">
